<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_orange_50"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.main.biblioisais.BiblioisaisFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/certificateInOwnLawTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/certificate_in_own_law"
            android:textColor="@color/md_blue_700"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cursos1_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/courses_item" />

        <RelativeLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="300dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/certificateOnEconomiesAndOrchardsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/certificate_on_economies_and_orchards"
            android:textColor="@color/md_blue_700"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cursos2_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/courses_item" />

        <TextView
            android:id="@+id/otherCoursesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/digital_literacy"
            android:textColor="@color/md_blue_700"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/otherCoursesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/courses_item" />

        <TextView
            android:id="@+id/educativeOfferTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/educative_offer"
            android:textColor="@color/md_blue_700"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/descriptionEducativeOfferTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="16sp"
            android:textColor="@color/md_grey_800"
            android:text="Para acceso, modalidad y certificación de cursos solicitar cita al WhatsApp 57 3216562260"
            android:textStyle="bold"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/educativeOfferRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/courses_item" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>